# ovlclient

./: CMakeLists.txt
cmake/: FindOpus.cmake
shared/: ovlclient.desktop  resources.qrc
shared/macos/: Info.plist  ovlclient.icns
src/: CMakeLists.txt  application.cc  application.hh  bootstrapnodelist.cc  bootstrapnodelist.hh  buddylist.cc  buddylist.hh  buddylistview.cc  buddylistview.hh  callwindow.cc  callwindow.hh  chatwindow.cc  chatwindow.hh  dhtnetgraph.cc  dhtnetgraph.hh  dhtstatus.cc  dhtstatus.hh  dhtstatusview.cc  dhtstatusview.hh  filetransferdialog.cc  filetransferdialog.hh  logwindow.cc  logwindow.hh  main.cc  searchcompletion.cc  searchcompletion.hh  searchdialog.cc  searchdialog.hh  settings.cc  settings.hh  settingsdialog.cc  settingsdialog.hh  sockswindow.cc  sockswindow.hh
